--- a/assets/css/cmps/user-msg.css
+++ b/assets/css/cmps/user-msg.css
@@ -2,10 +2,10 @@
     background-color: lightgray;
     padding: 1em;
     position: absolute;
-    bottom: 1em;
+    bottom: 4em;
     left: 1em;
     border-radius: 8px;
-    padding-inline-start: 2em;
+    padding-inline-end: 10em;
 }
 
 .user-msg.success {
@@ -21,8 +21,8 @@
 .user-msg button {
     position: absolute;
     float: right;
-    top: .1em;
-    left: -.2em;
+    top: 20%;
+    right: 0em;
     margin: 0em;
     background-color: transparent;
     border-color: transparent;
@@ -38,7 +38,7 @@
 }
 
 .user-msg span {
-    font-size: 1.2em;
+    font-size: 1.5em;
     border-radius: 50%;
     padding: .1em;
 }
